# namekit

./: .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  Dockerfile  README.md  nameguard.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json  vercel.json
.changeset/: afraid-bears-smoke.md  angry-birds-warn.md  angry-waves-chew.md  beige-radios-grin.md  big-llamas-wash.md  blue-rings-hunt.md  blue-seahorses-begin.md  calm-cougars-attack.md  calm-fishes-exercise.md  chilly-months-move.md  clean-jokes-shake.md  clean-moles-warn.md  cold-dingos-pay.md  config.json  cool-lions-lick.md  curly-brooms-jog.md  curvy-mugs-play.md  cyan-cats-taste.md  dry-spoons-invite.md  early-jokes-invent.md  empty-ducks-bathe.md  fair-apples-happen.md  fair-houses-mate.md  fair-pumas-chew.md  famous-files-stare.md  famous-jobs-wait.md  famous-snakes-change.md  fifty-brooms-shake.md  five-cameras-act.md  fluffy-laws-grow.md  fluffy-pots-mix.md  fluffy-pumpkins-drive.md  four-bees-tie.md  gentle-spoons-raise.md  good-parents-glow.md  good-terms-move.md  good-tools-marry.md  great-penguins-punch.md  healthy-coins-fold.md  heavy-panthers-smile.md  (+64 more)
.github/: CODEOWNERS
api/: .env  Dockerfile  README.md  package.json  pyproject.toml  serverless.yml
api/nameguard/: context.py  endpoints.py  exceptions.py  generic_utils.py  grapheme_normalization.py  lambda.py  logging.py  nameguard.py  our_ens.py  provider.py  subgraph.py  utils.py  web_api.py
api/nameguard/checks/: __init__.py
api/nameguard/checks/dna/: __init__.py  normalized.py  punycode.py
api/nameguard/checks/grapheme/: confusables.py  font_support.py  invisible.py  typing_difficulty.py
api/nameguard/checks/label/: __init__.py  mixed_scripts.py  namewrapper.py  normalized.py  punycode.py  unknown.py
api/nameguard/checks/name/: __init__.py  decentralized_name.py  impersonation_risk.py  namewrapper_fuses.py  punycode_name.py
api/nameguard/models/: __init__.py  checks.py  request.py  result.py
api/tests/: conftest.py  test_api.py  test_checks.py  test_nameguard.py  test_rating.py  test_subgraph.py  test_utils.py
api/tests/data/: call_subgraph__224b9f84ffda436de98ce1641f8eaf7f.json  call_subgraph__25d708d3e7edcee4ca85cd7657d7b370.json  call_subgraph__396d9e8955f456b289b64c7a387f0f90.json  call_subgraph__72292740f6a16ba57a2f35b6e9caa114.json  call_subgraph__a37586555c0833bdfd2ad71e49a2bbeb.json  call_subgraph__a3dd07a676ac11c2cb137fa119355a94.json  call_subgraph__aa6223a32900eb91d80057ccb078e0c6.json  call_subgraph__dabb3f86507cb2e6242815bfb18a113a.json  get_nft_metadata__0x495f947276749ce646f68ac8c248420045cb7b5e__115299889408293060529275095010636973531920388509401805939660647627196198813697.json  get_nft_metadata__0x495f947276749ce646f68ac8c248420045cb7b5e__12254154752654038808579574986506730093213650301129873673484321000757900869633.json  get_nft_metadata__0x495f947276749ce646f68ac8c248420045cb7b5e__61995921128521442959106650131462633744885269624153038309795231243542768648193.json  get_nft_metadata__0x495f947276749ce646f68ac8c248420045cb7b5e__87268313074833894749413679830860625010141738974859681274795075557252109697025.json  get_nft_metadata__0x6b175474e89094c44da98b954eedeac495271d0f__1.json  get_nft_metadata__0xbd3531da5cf5857e7cfaa92426877b022e612cf8__2028.json  get_nft_metadata__0xd4416b13d2b3a9abae7acd5d6c2bbdbe25686401__34762977820481521209114130776556072772965907316729597364642457029530388725237.json  get_nft_metadata__0xd8b287885cab9e377de8f61f000ff9b3f50e2f4d__0x4.json  get_nft_metadata__0xd8b287885cab9e377de8f61f000ff9b3f50e2f4d__4.json  get_nft_metadata__ERROR__0x57f1887a8bf19b14fc0df6fd9b2acc9af147ea85__0x68562fc74af4dcfac633a803c2f57c2b826827b47f797b6ab4e468dc8607b5d5.json  name__0x0d756ee0e8c250f88f5e0edd7c723dc3a0bf75cf.json  name__0x0ebdfd75d33c05025074fd7845848d44966ab367.json  name__0x7da3cde891a76416ec9d1c3354b8efe550bd4e20.json  name__0xf537a27f31d7a014c5b8008a0069c61f827fa7a1.json
apps/api.nameai.io/: .env.example  Dockerfile  README.md  pyproject.toml  start-local.sh
apps/api.nameai.io/nameai/: all_tokenizer.py  download.py  generate_static_data.py  name_ai.py  namerank.py  namerank_api.py  ngrams.py  nlp_inspector.py  person_names.py  root_api.py  scorer.py  static_property.py
apps/api.nameai.io/nameai/config/: __init__.py  prod_config.yaml
apps/api.nameai.io/nameai/data/: domain_specific_dictionary.txt
apps/api.nameai.io/nameai/data/tests/: bigram_freq.csv  custom_dictionary.txt  person_names_quality.json  unicode_numerics.txt
apps/api.nameai.io/namerank/: generate_static_data.py  scorer.py
apps/api.nameai.io/terraform/: deploy_lambda.sh  variables.tf
apps/api.nameai.io/terraform/modules/lambda_api/: main.tf  variables.tf
apps/api.nameai.io/tests/: conftest.py  test_api.py  test_nameai.py  test_namerank.py  test_ngrams.py  test_nlp_inspector.py  test_tokenizer.py
apps/api.nameai.io/tests/load_tests/: README.md  latency_results.csv  performance.py  run_load_tests.sh
apps/api.namerank.io/: Dockerfile  README.md  pyproject.toml  start-local.sh
apps/api.namerank.io/.github/workflows/: lambda-deploy.yml
apps/api.namerank.io/namerank/: all_tokenizer.py  models.py  namerank.py  namerank_api.py  ngrams.py  nlp_inspector.py  root_api.py  static_property.py
apps/api.namerank.io/namerank/config/: __init__.py
apps/api.namerank.io/namerank/data/: custom_dictionary.txt  domain_specific_dictionary.txt  should_be_tokenized.txt  words.txt
apps/api.namerank.io/namerank/data/tests/: domain_specific_dictionary.txt  unicode14.txt  unicode15.txt  words.txt
apps/api.namerank.io/terraform/: deploy_lambda.sh  main.tf
apps/api.namerank.io/terraform/modules/lambda_api/: main.tf
apps/api.namerank.io/tests/: mocked_static_property.py  test_api.py  test_namerank.py  test_nlp_inspector.py
docs/: chains.mdx  introduction.mdx  mint.json  openapi.json  quickstart.mdx  self-hosting.mdx
nameguard/: checks.py  exceptions.py  nameguard.py  provider.py  subgraph.py  utils.py  web_api.py
tests/: test_api.py  test_checks.py  test_nameguard.py  (+3 more)
(+980 files in other folders)
