[tool.poetry]
name = "nameai"
version = "0.1.9"
description = "NameHash NameAI API"
authors = ["NameHash Team <devops@namehash.io>"]
maintainers = ["NameHash Team <devops@namehash.io>"]
homepage = "https://www.nameai.io/"
repository = "https://github.com/namehash/namekit"
readme = "README.md"
license = "LICENSE"
packages = [{ include = "nameai" }]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ens-label-inspector = "^0.2.14"
nameguard = "^0.1.12"
fastapi = "^0.115.4"
mangum = { version = "^0.17.0", optional = true }
httpx = "^0.25.0"
python-dotenv = "^1.0.0"
pyahocorasick = "^2.0.0"
setuptools = "^75.1.0"
boto3 = "^1.36.14"


[tool.poetry.extras]
lambda = ["mangum"]


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-timeouts = "^1.2.1"
ruff = "^0.6.5"
pre-commit = "^3.6.2"


[tool.ruff]
line-length = 120
target-version = "py39"


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"


[tool.ruff.format]
quote-style = "single"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
